[package]
name = "bal"
version = "2.1.0"
edition = "2021"
description = "Ultra-lightweight TCP Load Balancer"
authors = ["parkjangwon"]
license = "MIT"
repository = "https://github.com/bal/bal"
rust-version = "1.75"

[[bin]]
name = "bal"
path = "src/main.rs"

[dependencies]
# 비동기 런타임 - tokio는 Rust의 표준 비동기 런타임으로 고성능 I/O 처리를 제공합니다
tokio = { version = "1.44.1", features = ["full"] }

# CLI 인자 파싱 - derive 매크로를 사용하여 선언적으로 명령어를 정의합니다
clap = { version = "4.5.31", features = ["derive"] }

# 직렬화/역직렬화 - 설정 파일(YAML)과 데이터 구조 간 변환을 처리합니다
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"

# 원자적 설정 교체 - 락 없이 설정을 핫스왑하는 핵심 라이브러리입니다
arc-swap = "1.7.1"

# 에러 처리 - 에러를 쉽게 전파하고 컨텍스트를 추가할 수 있게 합니다
anyhow = "1.0.97"

# 로깅 - 구조화된 로그 출력을 위한 표준 인터페이스를 제공합니다
log = "0.4.26"
env_logger = "0.11.6"

# 시스템 시그널 및 프로세스 제어 - SIGTERM/SIGHUP 처리와 PID 파일 관리에 사용됩니다
nix = { version = "0.29.0", features = ["signal", "process"] }

# 홈 디렉토리 경로 조회 - 크로스플랫폼 홈 디렉토리 탐색을 지원합니다
dirs = "5.0.1"

# 문자열 처리 유틸리티 - 문자열 파싱 및 변환에 유용합니다
regex = "1.11.1"
chrono = "0.4"        # 시간 포맷팅 - 로그 타임스탬프에 사용됩니다

# 데몬화 - 프로세스를 백그라운드로 분리하는 기능을 제공합니다
daemonize = "0.5"

[dev-dependencies]
# 테스트용 임시 파일 생성 - 테스트 환경 격리를 위해 사용됩니다
tempfile = "3.17.1"

[profile.release]
# 릴리즈 빌드 최적화 - 단일 바이너리 성능 극대화를 위한 설정입니다
opt-level = 3          # 최고 수준 최적화
lto = true             # 링크 타임 최적화 활성화
codegen-units = 1      # 단일 codegen unit으로 최적화 향상
strip = true           # 디버그 심볼 제거로 바이너리 크기 감소
panic = "abort"        # unwinding 대신 abort로 바이너리 크기 감소
